--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,15 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <style>
+    *{
+      padding:0;
+      margin: 0;
+      box-sizing: border-box;
+    }
+
+    body{
+      background-color: whitesmoke;
+    }
+  </style>
 </html>
